Fixed background being cut off.

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,3 +1,8 @@
+html {
+  font-family: "JetBrains Mono", sans-serif;
+  background: #000000 linear-gradient(to right, #000000, rgb(5, 0, 40));
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -6,8 +11,6 @@
 .main {
   width: 100%;
   height: 100%;
-  font-family: "JetBrains Mono", sans-serif;
-  background: #212121 linear-gradient(to right, rgb(0, 0, 0), rgb(5, 0, 40));
 }
 
 .planet {
